fixed formatting for assignment submission

--- a/help.html
+++ b/help.html
@@ -11,41 +11,34 @@
   </head>
   <body>
 
-  	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
-	  <a class="navbar-brand" href="#">My Journal Pages</a>
-
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-	      </li>
-        <li class="nav-item">
-	        <a class="nav-link" href="features.html">Features</a>
-	      </li>
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="./create.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Create
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="./create.html">Note</a>
-	          <a class="dropdown-item" href="#">Journal</a>
-	          <a class="dropdown-item" href="#">Blog</a>
-	        </div>
-	      </li>
-        <li class="nav-item">
-          <a class="nav-link" href="help.html">Help</a>
-        </li>
-	    </ul>
-	    <form class="form-inline my-2 my-lg-0">
-	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-	      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-	    </form>
-	  </div>
-	</nav>
+  	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">My Journal Pages</a>
+  
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="features.html">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="create.html">Create</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="help.html">Help</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
 
   <div class='page'>
     <div class="container-fluid mt-2">
@@ -110,7 +103,7 @@
       <a href="#login"></a>
       <a href="#login"></a>
 
-      <a href="https://github.com/lathorne/creative-project" style="font-size:10px">https://github.com/lathorne/creative-project</a>
+      <a href="https://github.com/lathorne/creative-project" style="font-size:10px">https://github.com/lathorne/creative-project</a> Logan Thorneloe & Clint Frandsen
     </div>
 
     <!-- Optional JavaScript -->
