--- a/create.html
+++ b/create.html
@@ -10,41 +10,34 @@
   </head>
   <body>
 
-  	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
-	  <a class="navbar-brand" href="#">My Journal Pages</a>
-
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-	      </li>
-        <li class="nav-item">
-	        <a class="nav-link" href="features.html">Features</a>
-	      </li>
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="./create.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Create
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="./create.html">Note</a>
-	          <a class="dropdown-item" href="#">Journal</a>
-	          <a class="dropdown-item" href="#">Blog</a>
-	        </div>
-	      </li>
-        <li class="nav-item">
-          <a class="nav-link" href="help.html">Help</a>
-        </li>
-	    </ul>
-	    <form class="form-inline my-2 my-lg-0">
-	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-	      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-	    </form>
-	  </div>
-	</nav>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">My Journal Pages</a>
+  
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+  
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		  <ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+			  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="features.html">Features</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="create.html">Create</a>
+			</li>
+		  <li class="nav-item">
+			<a class="nav-link" href="help.html">Help</a>
+		  </li>
+		  </ul>
+		  <form class="form-inline my-2 my-lg-0">
+			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+		  </form>
+		</div>
+	  </nav>
 
 	<div class="card page">
 	  <div class="card-body">
@@ -136,8 +129,8 @@
     <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@cikstefan?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Štefan Štefančík"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Štefan Štefančík</span></a> -->
 
     <div class="footer">
-	  <a href="https://github.com/lathorne/creative-project">https://github.com/lathorne/creative-project</a>
-	</div>
+	    <a href="https://github.com/lathorne/creative-project">https://github.com/lathorne/creative-project</a> Logan Thorneloe & Clint Frandsen
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
